--- a/clean_scale_segment.ipynb
+++ b/clean_scale_segment.ipynb
@@ -13,7 +13,9 @@
     "import random\n",
     "import numpy as np\n",
     "import tifffile\n",
-    "import shutil"
+    "import tifffile as tf\n",
+    "import shutil\n",
+    "from tifffile import imread, imsave"
    ]
   },
   {
@@ -24,9 +26,55 @@
    "source": [
     "def upscale_image(image_path, target_width):\n",
     "    image = cv2.imread(image_path, cv2.IMREAD_UNCHANGED)\n",
+    "\n",
+    "    # Upscale the image\n",
     "    if image.shape[0] != target_width or image.shape[1] != target_width:\n",
     "        image = cv2.resize(image, (target_width, target_width), interpolation=cv2.INTER_LANCZOS4)\n",
+    "\n",
+    "    # If the image width is 1200, crop it to 1200x782\n",
+    "    #if image.shape[1] == 1200:\n",
+    "    #    target_height = 782\n",
+    "    #    pixels_to_remove = image.shape[0] - target_height\n",
+    "    #    pixels_to_remove_from_top = pixels_to_remove // 2\n",
+    "    #    pixels_to_remove_from_bottom = pixels_to_remove - pixels_to_remove_from_top\n",
+    "        \n",
+    "    #    image = image[pixels_to_remove_from_top:-pixels_to_remove_from_bottom, :]\n",
+    "\n",
     "    return image\n",
+    "\n",
+    "def crop_image_if_needed(image):\n",
+    "    # If the image width is 1200, crop it to 1200x782\n",
+    "    if image.shape[1] == 1200:\n",
+    "        target_height = 782\n",
+    "        pixels_to_remove = image.shape[0] - target_height\n",
+    "        pixels_to_remove_from_top = pixels_to_remove // 2\n",
+    "        pixels_to_remove_from_bottom = pixels_to_remove - pixels_to_remove_from_top\n",
+    "\n",
+    "        image = image[pixels_to_remove_from_top:-pixels_to_remove_from_bottom, :]\n",
+    "    return image\n",
+    "\n",
+    "def crop_images_in_folder(folder_path):\n",
+    "    for image_name in os.listdir(folder_path):\n",
+    "        if image_name.endswith('.tif'):\n",
+    "            image_path = os.path.join(folder_path, image_name)\n",
+    "            image = tf.imread(image_path)\n",
+    "            cropped_image = crop_image_if_needed(image)\n",
+    "            tf.imsave(image_path, cropped_image) \n",
+    "\n",
+    "def crop_directory(base_directory):\n",
+    "    sub_folders = [name for name in os.listdir(base_directory) if os.path.isdir(os.path.join(base_directory, name))]\n",
+    "    \n",
+    "    for sub_folder in tqdm(sorted(sub_folders)):\n",
+    "        if sub_folder in [\"00\", \"00_ST\"]:\n",
+    "            continue\n",
+    "        if not sub_folder.endswith(\"_GT\"):\n",
+    "            print('Processing sub_folder:', sub_folder)\n",
+    "            if sub_folder.endswith(\"_ST\"):\n",
+    "                seg_folder = os.path.join(base_directory, sub_folder, 'SEG')\n",
+    "            else:\n",
+    "                seg_folder = os.path.join(base_directory, sub_folder)\n",
+    "                \n",
+    "            crop_images_in_folder(seg_folder)\n",
     "\n",
     "def upscale_images_in_folder(folder_path, target_width, path_pretrained, model_name):\n",
     "    files_in_folder = glob.glob(os.path.join(folder_path, '*'))\n",
@@ -50,7 +98,7 @@
     "\n",
     "    print('cellpose current path',folder_path)\n",
     "    # After processing the folder, run the Cellpose command\n",
-    "    os.system(f\"python -m cellpose --dir '{folder_path}' --pretrained_model '{path_pretrained + model_name}' --save_png\")\n",
+    "    os.system(f\"python -m cellpose --dir '{folder_path}' --pretrained_model '{path_pretrained + model_name}' --diameter 80 --save_png\")\n",
     "    #for selected_file in random_selected_files:\n",
     "        #print('cellpose current path',selected_file)\n",
     "        #os.system(f\"python -m cellpose --img '{selected_file}' --pretrained_model '{path_pretrained + model_name}' --no_gui --save_png\")\n",
@@ -85,8 +133,8 @@
     "    for sub_folder in tqdm(sorted(sub_folders)):\n",
     "        if not sub_folder.endswith(\"_GT\") and not sub_folder.endswith(\"_ST\"):\n",
     "            print('sub_folder',sub_folder)\n",
-    "            if sub_folder=='1':\n",
-    "                print(stop)\n",
+    "            #if sub_folder=='1':\n",
+    "            #    print(stop)\n",
     "            upscale_images_in_folder(os.path.join(base_directory, sub_folder), target_width, path_pretrained, model_name)\n",
     "            \n",
     "            # Paths for segmentation and ground truth\n",
@@ -120,7 +168,7 @@
     "                corrected_mask = process_masks(seg_file, new_gt_file_path,radius=r)\n",
     "                cv2.imwrite(seg_file, corrected_mask)  # Overwrite the segmentation mask in the SEG folder\n",
     "            \n",
-    "    #clean_up(base_directory)\n",
+    "    clean_up(base_directory)\n",
     "            \n",
     "def process_masks(segmentation_mask_path, detection_gt_path, radius=10):\n",
     "    # Load the images\n",
@@ -177,17 +225,21 @@
     "\n",
     "def clean_up(base_directory):\n",
     "    # Rename folders with names '1' to '9' to add leading zeros\n",
-    "    for i in range(1, 10):\n",
-    "        old_name = str(i)\n",
-    "        new_name = str(i).zfill(2)\n",
-    "        \n",
-    "        # Check if folders exist before renaming\n",
-    "        for suffix in [\"\", \"_GT\", \"_ST\"]:\n",
-    "            old_folder = os.path.join(base_directory, old_name + suffix)\n",
-    "            new_folder = os.path.join(base_directory, new_name + suffix)\n",
-    "            \n",
-    "            if os.path.exists(old_folder):\n",
-    "                os.rename(old_folder, new_folder)\n",
+    "    try:\n",
+    "        for i in range(1, 10):\n",
+    "            old_name = str(i)\n",
+    "            new_name = str(i).zfill(2)\n",
+    "\n",
+    "            # Check if folders exist before renaming\n",
+    "            for suffix in [\"\", \"_GT\", \"_ST\"]:\n",
+    "                old_folder = os.path.join(base_directory, old_name + suffix)\n",
+    "                new_folder = os.path.join(base_directory, new_name + suffix)\n",
+    "\n",
+    "                if os.path.exists(old_folder):\n",
+    "                    os.rename(old_folder, new_folder)\n",
+    "\n",
+    "    except:\n",
+    "        pass\n",
     "\n",
     "    # Deleting specified folders and files\n",
     "    gt_folders = [name for name in os.listdir(base_directory) if name.endswith(\"_GT\")]\n",
@@ -203,7 +255,46 @@
     "        # Delete pos_GT.txt in TRA subfolder\n",
     "        pos_gt_file = os.path.join(path_to_folder, \"TRA\", \"pos_GT.txt\")\n",
     "        if os.path.exists(pos_gt_file):\n",
-    "            os.remove(pos_gt_file)\n"
+    "            os.remove(pos_gt_file)\n",
+    "            \n",
+    "    all_folders = [name for name in os.listdir(base_directory) if not name.endswith((\"_GT\", \"_ST\"))]\n",
+    "    for folder in all_folders:\n",
+    "        path_to_folder = os.path.join(base_directory, folder)\n",
+    "        print('folder',folder)\n",
+    "        # Open and save .tif files\n",
+    "        tif_files = [file for file in os.listdir(path_to_folder) if file.endswith(\".tif\")]\n",
+    "        for file in tif_files:\n",
+    "            full_path = os.path.join(path_to_folder, file)\n",
+    "            img = imread(full_path)\n",
+    "            \n",
+    "            # Check if the image has more than one channel\n",
+    "            if len(img.shape) > 2 and img.shape[2] > 1:\n",
+    "                # Taking only the first channel\n",
+    "                img_one_channel = img[:, :, 0]\n",
+    "                imsave(full_path, img_one_channel)\n",
+    "def copy_to_real(src_folder):\n",
+    "    # Define the destination folder based on the source folder\n",
+    "    dst_folder = src_folder + '_real_only'\n",
+    "    \n",
+    "    # Create the destination folder if it doesn't exist\n",
+    "    if not os.path.exists(dst_folder):\n",
+    "        os.makedirs(dst_folder)\n",
+    "    \n",
+    "    # List of folder names to be copied\n",
+    "    folder_names = [\"00\", \"00_ST\", \"00_GT\"]\n",
+    "    \n",
+    "    # Loop 11 times to copy and rename folders\n",
+    "    for i in range(11):\n",
+    "        for folder_name in folder_names:\n",
+    "            # Define source and destination paths\n",
+    "            src_path = os.path.join(src_folder, folder_name)\n",
+    "            dst_path = os.path.join(dst_folder, f\"{i:02}\" + folder_name[2:])\n",
+    "            \n",
+    "            # Check if the source path exists before copying\n",
+    "            if os.path.exists(src_path):\n",
+    "                shutil.copytree(src_path, dst_path)\n",
+    "            else:\n",
+    "                print(f\"Source folder {src_path} does not exist. Skipping...\")"
    ]
   },
   {
@@ -218,20 +309,84 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstop\u001b[49m)\n\u001b[1;32m      3\u001b[0m base_directory_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/Generated/HUH\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Change this to your actual directory\u001b[39;00m\n\u001b[1;32m      4\u001b[0m path_pretrained \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/cellpose_train/HUH/models/\u001b[39m\u001b[38;5;124m'\u001b[39m    \u001b[38;5;66;03m# Change to the actual path\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m base_directory_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/Generated/HUH2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstop\u001b[49m)\n\u001b[1;32m      5\u001b[0m   \u001b[38;5;66;03m# Change this to your actual directory\u001b[39;00m\n\u001b[1;32m      6\u001b[0m path_pretrained \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/cellpose_train/HUH/models/\u001b[39m\u001b[38;5;124m'\u001b[39m    \u001b[38;5;66;03m# Change to the actual path\u001b[39;00m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
+    "base_directory_path = '/media/mo/KINGSTON/Generated/HUH2'\n",
+    "\n",
     "print(stop)\n",
-    "base_directory_path = '/media/mo/KINGSTON/Generated/HUH'  # Change this to your actual directory\n",
+    "  # Change this to your actual directory\n",
     "path_pretrained = '/media/mo/KINGSTON/cellpose_train/HUH/models/'    # Change to the actual path\n",
-    "model_name = 'cellpose_residual_on_style_on_concatenation_off_HUH_2023_10_17_19_44_40.452432'                        # Change to the actual model name\n",
+    "model_name = 'cellpose_residual_on_style_on_concatenation_off_HUH_2023_10_17_19_44_40.452432' # Change to the actual model name\n",
+    "#path_pretrained = ''\n",
+    "#model_name='CPx' #for HELA\n",
     "target_width_value = 1024\n",
-    "r=33\n",
+    "r=43\n",
     "process_directory(base_directory_path, target_width_value, path_pretrained, model_name,r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#copy_to_real(base_directory_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#crop_directory(base_directory_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printshapes(folder_path):\n",
+    "    # Define the subfolder names\n",
+    "    subfolders = ['00', '50']\n",
+    "    \n",
+    "    # Initialize results dictionary\n",
+    "    results = {}\n",
+    "    \n",
+    "    # Iterate over subfolder names\n",
+    "    for subfolder in subfolders:\n",
+    "        # Get the first tif file from the subfolder\n",
+    "        image_path = sorted([f for f in os.listdir(os.path.join(folder_path, subfolder)) if f.endswith('.tif')])[0]\n",
+    "        image = tf.imread(os.path.join(folder_path, subfolder, image_path))\n",
+    "        results[subfolder] = image.shape\n",
+    "\n",
+    "        # Process 'TRA' from the subfolder_GT directory\n",
+    "        tra_path = os.path.join(folder_path, f'{subfolder}_GT', 'TRA')\n",
+    "        image_path = sorted([f for f in os.listdir(tra_path) if f.endswith('.tif')])[0]\n",
+    "        image = tf.imread(os.path.join(tra_path, image_path))\n",
+    "        results[f'{subfolder}_GT_TRA'] = image.shape\n",
+    "\n",
+    "        # Process 'SEG' from the subfolder_ST directory\n",
+    "        seg_path = os.path.join(folder_path, f'{subfolder}_ST', 'SEG')\n",
+    "        image_path = sorted([f for f in os.listdir(seg_path) if f.endswith('.tif')])[0]\n",
+    "        image = tf.imread(os.path.join(seg_path, image_path))\n",
+    "        results[f'{subfolder}_ST_SEG'] = image.shape\n",
+    "    \n",
+    "    for key, value in results.items():\n",
+    "        if len(value) == 2:  # Check for one-channel images\n",
+    "            print(f'{key} --> ({value[0]} x {value[1]})')\n",
+    "        else:\n",
+    "            print(f'{key} --> ({value[0]} x {value[1]} x {value[2]})')\n",
+    "# Call the function with a folder path\n",
+    "folder_path = '/media/mo/KINGSTON/Generated/HUH'\n",
+    "printshapes(folder_path)"
    ]
   },
   {
